--- a/src/sass/components/_lightbox.scss
+++ b/src/sass/components/_lightbox.scss
@@ -9,7 +9,7 @@
         height: 100%;
         background: #fff;
         z-index: 13;
-        overflow: scroll;
+        // overflow: scroll;
 
         &__nextButton,
         &__prevButton {
@@ -45,8 +45,8 @@
         &__media {
             border-radius: 5px;
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            max-height: 90vh;
+            object-fit: contain;
             object-position: 50% 30%;
             z-index: 12;
         }
@@ -61,7 +61,7 @@
             z-index: 12;
             position: absolute;
             top: 0;
-            right: -14%;
+            right: -13%;
         }
 
         &__mediaDesc {
